# fast-task-gateway

./: Dockerfile  README.md  config.yaml  pyproject.toml
src/fast_task_gateway/: __init__.py  auth.py  client.py  config.py  consul.py  lifecycle.py  main.py  proxy.py
src/fast_task_gateway/routes/: __init__.py  proxy.py
