[project]
name = "fast-task-gateway"
version = "0.1.0"
description = "Fast Task API Gateway with Consul service discovery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[http2]>=0.27.0",
    "pyyaml>=6.0.1",
    "py-consul>=1.1.0",
    "fast-task-base @ git+https://github.com/XPDD/fast-task-base.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
